<resources>
    <string name="app_name">AppSqlServerUDV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="agregar">Equipos</string>
    <string name="listado">Agregar Equipo</string>
    <string name="actualizar">Agregar Jugador</string>
    <string name="eliminar">Fichaje</string>

    <string name="error_sms">Error</string>
    <string name="confirm_text">OK</string>
    <string name="key_validar_primera_vez">com.aescttgt.posbi2020</string>
    <string name="destino">destino</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuracion">Configuracion</string>
    <string name="ip">ip</string>
    <string name="database_name">data_name</string>
    <string name="user_name">user_name</string>
    <string name="password">password</string>
    <string name="eliminar_entrenador">Eliminar Entrenador</string>
    <string name="agregar_partido">Agregar Partido</string>
</resources>